<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/tutorialActivity"
        android:title="@string/title_activity_tutorial" />

    <item
        android:id="@+id/about"
        android:title="@string/about" />


    <item
        android:id="@+id/settingsActivity"
        android:title="@string/title_activity_settings" />

    <item
        android:id="@+id/item_learning"
        android:title="@string/learning" />

    <item
        android:id="@+id/item_archive"
        android:title="@string/archive" />

    <item
        android:id="@+id/item_myprofile"
        android:title="@string/myprofile" />

    <item
        android:id="@+id/item_feedback"
        android:title="@string/Feedback" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />

</menu>